Fix typos and missing study topics

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -112,7 +112,7 @@ Spiritual Renewal:
     -	Lessons on finding fellowship with God from David - 1 Chronicles 15: 1-Chronicles-15
     -	Signs of a person walking in faithful fellowship with God -1 Chronicles 28: 1-Chronicles-28
     -	Lessons from the Temple on maintaining God’s fellowship - 2 Chronicles 5: 2-Chronicles-5
-    - Lessons from Nehemiah on maintaining a covenant relationship – Nehemiah 10: Nehemiah-10
+    - Lessons from Nehemiah on maintaining God's fellowship – Nehemiah 10: Nehemiah-10
 Discipleship:
   Following Jesus’ Ten Commandments:
     - Prelude to Jesus’ Ten Commandments - Exodus 19: Exodus-19
@@ -376,6 +376,7 @@ Worship:
     - Lessons from Nehemiah on the elements of true worship – Nehemiah 12: Nehemiah-12
 Spiritual Warfare:
   Lessons on Spiritual Warfare:
+    - Spiritual warfare lessons from the wilderness - Numbers 1:5-16: Numbers-1.5-16
     - Spiritual warfare lessons from Moses (Part II) - Deuteronomy 20: Deuteronomy-20
     - Spiritual warfare lessons from Joshua (Part III) - Joshua 5: Joshua-20
     - Spiritual warfare lessons from Joshua (Part IV) - Joshua 6: Joshua-6
@@ -410,7 +411,6 @@ Jesus in the Old Testament:
     - Jesus in the Succoth / Tabernacles (His Birthday) - Numbers 29:12-40: Numbers-29.12-40
     - Jesus in the second Passover – Numbers 9: Numbers-9
     - Josiah’s spiritual renewal with the Passover – 2 Chronicles 35: 2-Chronicles-35
-    - The foreshadow of Jesus in the gates of Jerusalem – Nehemiah 3: Nehemiah-3
   The Foreshadow of Jesus in the Tabernacle:
     - Jesus in the Outer Courtyard / Atonement - Exodus 27: Exodus-27
     - Jesus in Tent of Meeting  / Sanctification – Exodus 26: Exodus-26
@@ -424,6 +424,7 @@ Jesus in the Old Testament:
     - Jesus appears to Joshua	– Joshua 5: Joshua-5
     - Jesus appears to Gideon	– Judges 6: Judges-6
     - Jesus appears to Samson’s parents - Judges 13: Judges-13
+    - The foreshadow of Jesus in the gates of Jerusalem – Nehemiah 3: Nehemiah-3
 Attributes of God:
   God’s Faithful Old Testament Covenants:
     - The Noah Covenant	- Genesis 9: Genesis-9
@@ -582,7 +583,7 @@ Apologetics:
     - Response to the Documentary Hypothesis – Deuteronomy 1: Deuteronomy-1
   Apologetics Regarding Other Religions / Cults:
     - Christian Response to a Jehovah Witness regarding the Trinity - letter: Trinity
-    - Christian Response to Christian Response to Paramahansa Yogananda, the Self-Realization Fellowship and Reincarnation - essay: Christian-Response-to-Paramahansa-Yogananda
+    - Christian Response to Paramahansa Yogananda, the Self-Realization Fellowship and Reincarnation - essay: Christian-Response-to-Paramahansa-Yogananda
 End Times:
   End Time Revelations:
     - End time revelations from the Flood - Genesis 7:  Genesis-7
