Correct typos in topic-index.yml

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -309,9 +309,9 @@ Leadership:
     - Principles for Spirit-led leadership - Deuteronomy 31: Deuteronomy-31
     - Lessons on leadership from Joshua – Joshua 1: Joshua-1
     - Lessons from Jonathan on being a faithful leader - 1 Samuel 14: 1-Samuel-14
-    - s lessons about being a godly leader from David’s anointing - 1 Samuel 16: 1-Samuel-16
+    - Lessons about being a godly leader from David’s anointing - 1 Samuel 16: 1-Samuel-16
     - Lessons on Spirit-led leadership from David’s conquests - 2 Samuel 8: 1-Samuel-8
-    -  additional lessons from David on Spirit-led leadership - 2 Samuel 21: 1-Samuel-21
+    - Lessons from David on Spirit-led leadership - 2 Samuel 21: 1-Samuel-21
     - Lessons on leadership from David’s mighty men of faith - 2 Samuel 23: 1-Samuel-23
     - Lessons on being a Spirit-led leader from Solomon - 1 Kings 2: 1-Kings-2
     - Lessons on using God’s wisdom to lead - 1 Kings 4: 1-Kings-4
@@ -320,7 +320,7 @@ Leadership:
   Selecting Leaders / Delegation:
     - Lessons on delegation and avoiding ministry burnout - Exodus 18: Exodus-18
     - Principles for selecting replacement leaders – Numbers 27: Numbers-27
-    -  warnings from Saul about selecting leaders - 1 Samuel 9: 1-Samuel-9
+    - Warnings from Saul about selecting leaders - 1 Samuel 9: 1-Samuel-9
     - Lessons from David on selecting leaders - 1 Chronicles 27: 1-Chronicles-27
     - Lessons from Ezra’s selection on effective leadership – Ezra 7: Ezra-7
   Church Growth:
@@ -328,10 +328,10 @@ Leadership:
   Rebellious leaders:
     - Rebellion against God’s appointed leaders - Numbers 16: Numbers-16
     - Warnings regarding leadership from the Judges - Judges 12: Judges-12
-    -  warnings from Saul about ungodly leaders (Part I) - 1 Samuel 13: 1-Samuel-13
-    -  warnings from Saul about rebellious leaders (Part II) - 1 Samuel 31: 1-Samuel-31
+    - Warnings from Saul about ungodly leaders (Part I) - 1 Samuel 13: 1-Samuel-13
+    - Warnings from Saul about rebellious leaders (Part II) - 1 Samuel 31: 1-Samuel-31
     - Warnings from Rehoboam and Jeroboam on foolish leaders - 1 Kings 12: 1-Kings-12
-    -  warnings regarding rebellious leaders - 1 Kings 15: 1-Kings-15
+    - Warnings regarding rebellious leaders - 1 Kings 15: 1-Kings-15
     - Lessons on leadership from Amaziah and Jeroboam II’s mistakes - 2 Kings 14: 2-Kings-14
 Prayer:
   Prayer:
@@ -362,7 +362,7 @@ Worship:
     - Lessons on worship from the Tabernacle – Exodus 25: Exodus-25
     - The command to love God (Part I) – Deuteronomy 10: Deuteronomy-10
     - The command to love God (Part II) -Deuteronomy 11: Deuteronomy-11
-    -  principles for Spirit-Led worship - Deuteronomy 12: Deuteronomy-12
+    - Principles for Spirit-Led worship - Deuteronomy 12: Deuteronomy-12
     - Lessons for remembering God’s miracles in your life - Joshua 4: Joshua-4
     - Lessons on worship from the song of Deborah and Barak - Judges 5: Judges-5
     - Hannah’s praise for God’s gift of her child – 1 Samuel 2: 1-Samuel-2
@@ -526,7 +526,7 @@ Attributes of God:
     - Lessons from six tribes on seizing your spiritual inheritance – Joshua 19: Joshua-19
     - Lessons on God’s blessings from David’s anointing as king - 2 Samuel 5  : 2-Samuel-5
     - Through Elisha, God miraculously provides for His people – 2 Kings 4: 2-Kings-4
-    -  unconditional and conditional blessings that God offers - 2 Chronicles 17: 2-Chronicles-17
+    - Unconditional and conditional blessings that God offers - 2 Chronicles 17: 2-Chronicles-17
     - God’s provision for the Jews in building the second Temple – Ezra 6: Ezra-6
   God’s Gift of Wisdom:
     - Lessons regarding God’s wisdom from Solomon - 1 Kings 3: 1-Kings-3
