Update topic index with Esther studios

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -389,6 +389,7 @@ Spiritual Warfare:
     - Spiritual warfare lessons from Elisha (Part XI) - 2 Kings: 2-Kings-6
     - Spiritual warfare lessons from Nehemiah (Part XII) – Nehemiah 4: Nehemiah-4
     - Spiritual warfare lessons from Nehemiah (Part XIII) – Nehemiah 6: Nehemiah-6
+    - Lessons from Mordecai and Esther on spiritual transformation: Esther-4
 Stewardship:
   Lessons on Tithing:
     - "Abraham’s tithes - Genesis 14": Genesis-14
@@ -401,16 +402,17 @@ Stewardship:
     - Tithing to support ministry (Part II) - Deuteronomy 18: Deuteronomy-18
     - Tithing your first fruits out of gratitude - Deuteronomy 26: Deuteronomy-26
 Jesus in the Old Testament:
-  Jesus’ Seven Festivals - The Appointed Times to Celebrate Him:
+  Jesus’ Eight Festivals - The Appointed Times to Celebrate Him:
     - Jesus in the Passover / Seder / The Crucifixion – Exodus 12: Exodus-12
     - Jesus in the Feast of Unleavened Bread / the Passion Week - Deuteronomy 16: Deuteronomy-12
     - Jesus in the Feast of First Fruits / Resurrection Sunday - Exodus 13: Exodus-12
     - Jesus in the Feast of Weeks / Pentecost - Leviticus 23:6-22: Leviticus-23.4-22
-    - Jesus in the Yom Kippur / The Possible Rapture – Leviticus 16: Leviticus-16
-    - Jesus in the Rosh Hashanah / National Prayer Day - Leviticus 23:23-32: Leviticus-23.23-32
+    - Jesus in the Yom Kippur / National Prayer Day  – Leviticus 16: Leviticus-16
+    - Jesus in the Rosh Hashanah / The Possible Rapture - Leviticus 23:23-32: Leviticus-23.23-32
     - Jesus in the Succoth / Tabernacles (His Birthday) - Numbers 29:12-40: Numbers-29.12-40
     - Jesus in the second Passover – Numbers 9: Numbers-9
     - Josiah’s spiritual renewal with the Passover – 2 Chronicles 35: 2-Chronicles-35
+    - Jesus in the Feast of Purim: Esther-9-10
   The Foreshadow of Jesus in the Tabernacle:
     - Jesus in the Outer Courtyard / Atonement - Exodus 27: Exodus-27
     - Jesus in Tent of Meeting  / Sanctification – Exodus 26: Exodus-26
@@ -465,6 +467,7 @@ Attributes of God:
     - God’s mercy any grace in protecting Ahab – 1 Kings 20: 1-Kings-20
     - God give Ahaziah three chances to repent – 2 Kings 1: 2-Kings-1 
     - God’s mercy and grace from His selection of the Davidic kings - 1 Chronicles 3: 1-Chronicles-3
+    - God’s grace in selecting Esther and Mordecai: Esther-2
   God’s Justice:
     - Principles of divine justice (Part I) – Exodus 21: Exodus-21
     - Principles of divine justice (Part I) – Exodus 22: Exodus-22
@@ -498,6 +501,8 @@ Attributes of God:
     - God delivers David’s line from Athaliah’s attempt to kill them – 2 Kings 11: 2-Kings-11
     - God delivers Judah from the Assyrian army – 2 Kings 19: 2-Kings-19
     - From Jehoshaphat, seven lessons on God’s deliverance - 2 Chronicles 20: 2-Chronicles-20
+    - God delivers Mordecai from Haman’s schemes: Esther-6
+    - God delivers the Jews from Haman’s schemes: Esther-8
   God’s Holiness:
     - Honoring God’s holiness with a holy life – Leviticus 19: Leviticus-19 
     - Keeping God’s names holy - Deuteronomy 5:11: Deuteronomy-5.11
@@ -537,7 +542,7 @@ Attributes of God:
     - God’s promise of healing – Exodus 15: Exodus-15
     - God’s blessing of both a prolonged and healthy life – Deuteronomy 34: Deuteronomy-34
     - God heals Naaman of leprosy - 2 Kings 5: 2-Kings-5
-    - God heals Hezekiah and extends his life – 2 Kings 19: 2-Kings-19
+    - God heals Hezekiah and extends his life – 2 Kings 19: 2-Kings-20
   God’s Judgement of Sin / Discipline:
     - God judges Adam, Eve and mankind	- Genesis 3: Genesis-3
     - God judges the world with Flood – Genesis 6: Genesis-6
@@ -629,6 +634,7 @@ Sin:
     - Jehu’s pride in judging others – 2 Kings 10: 2-Kings-10
     - King Sennacherib’s pride before God – 2 Kings 19: 2-Kings-19
     - From Uzziah, seven warnings regarding pride - 2 Chronicles 26: 2-Chronicles-26
+    - Warnings from Haman and Xerxes regarding pride: Esther-3
   Covetousness, Jealousy, Lust and Greed:
     - Laban covets and tries to steal Jacob’s blessings – Genesis 29: Genesis-29
     - Reuben’s sleeps with of his father’s concubine -  Genesis 35 : Genesis-35
