Add missing book titles to new topics

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -389,7 +389,7 @@ Spiritual Warfare:
     - Spiritual warfare lessons from Elisha (Part XI) - 2 Kings: 2-Kings-6
     - Spiritual warfare lessons from Nehemiah (Part XII) – Nehemiah 4: Nehemiah-4
     - Spiritual warfare lessons from Nehemiah (Part XIII) – Nehemiah 6: Nehemiah-6
-    - Lessons from Mordecai and Esther on spiritual transformation: Esther-4
+    - Lessons from Mordecai and Esther on spiritual transformation - Esther 4: Esther-4
 Stewardship:
   Lessons on Tithing:
     - "Abraham’s tithes - Genesis 14": Genesis-14
@@ -467,7 +467,7 @@ Attributes of God:
     - God’s mercy any grace in protecting Ahab – 1 Kings 20: 1-Kings-20
     - God give Ahaziah three chances to repent – 2 Kings 1: 2-Kings-1 
     - God’s mercy and grace from His selection of the Davidic kings - 1 Chronicles 3: 1-Chronicles-3
-    - God’s grace in selecting Esther and Mordecai: Esther-2
+    - God’s grace in selecting Esther and Mordecai - Esther 2: Esther-2
   God’s Justice:
     - Principles of divine justice (Part I) – Exodus 21: Exodus-21
     - Principles of divine justice (Part I) – Exodus 22: Exodus-22
@@ -501,8 +501,8 @@ Attributes of God:
     - God delivers David’s line from Athaliah’s attempt to kill them – 2 Kings 11: 2-Kings-11
     - God delivers Judah from the Assyrian army – 2 Kings 19: 2-Kings-19
     - From Jehoshaphat, seven lessons on God’s deliverance - 2 Chronicles 20: 2-Chronicles-20
-    - God delivers Mordecai from Haman’s schemes: Esther-6
-    - God delivers the Jews from Haman’s schemes: Esther-8
+    - God delivers Mordecai from Haman’s schemes - Esther 6: Esther-6
+    - God delivers the Jews from Haman’s schemes - Esther 8: Esther-8
   God’s Holiness:
     - Honoring God’s holiness with a holy life – Leviticus 19: Leviticus-19 
     - Keeping God’s names holy - Deuteronomy 5:11: Deuteronomy-5.11
@@ -634,7 +634,7 @@ Sin:
     - Jehu’s pride in judging others – 2 Kings 10: 2-Kings-10
     - King Sennacherib’s pride before God – 2 Kings 19: 2-Kings-19
     - From Uzziah, seven warnings regarding pride - 2 Chronicles 26: 2-Chronicles-26
-    - Warnings from Haman and Xerxes regarding pride: Esther-3
+    - Warnings from Haman and Xerxes regarding pride - Esther 3: Esther-3
   Covetousness, Jealousy, Lust and Greed:
     - Laban covets and tries to steal Jacob’s blessings – Genesis 29: Genesis-29
     - Reuben’s sleeps with of his father’s concubine -  Genesis 35 : Genesis-35
