Fix esther 9-10 study name

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -412,7 +412,7 @@ Jesus in the Old Testament:
     - Jesus in the Succoth / Tabernacles (His Birthday) - Numbers 29:12-40: Numbers-29.12-40
     - Jesus in the second Passover – Numbers 9: Numbers-9
     - Josiah’s spiritual renewal with the Passover – 2 Chronicles 35: 2-Chronicles-35
-    - Jesus in the Feast of Purim: Esther-9-10
+    - Jesus in the Feast of Purim - Esther 9-10: Esther-9-10
   The Foreshadow of Jesus in the Tabernacle:
     - Jesus in the Outer Courtyard / Atonement - Exodus 27: Exodus-27
     - Jesus in Tent of Meeting  / Sanctification – Exodus 26: Exodus-26
