Add esther 4 study topic

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -65,6 +65,7 @@ Spiritual Renewal:
     - Lessons from Ezra on leading a nation in spiritual renewal – Ezra 10: Ezra-10
     - Lessons from Nehemiah on finding spiritual renewal  – Nehemiah 8: Nehemiah-8
     - Lessons from Nehemiah on why spiritual revivals fail – Nehemiah 13: Nehemiah-13
+    - Lessons from Mordecai and Esther on spiritual transformation - Esther 4: Esther-4
   Humility / Meekness:
     - Jacob’s humility before God – Genesis 31: Genesis-31
     - Moses’ humility before God – Numbers 11: Numbers-12
@@ -542,7 +543,7 @@ Attributes of God:
     - God’s promise of healing – Exodus 15: Exodus-15
     - God’s blessing of both a prolonged and healthy life – Deuteronomy 34: Deuteronomy-34
     - God heals Naaman of leprosy - 2 Kings 5: 2-Kings-5
-    - God heals Hezekiah and extends his life – 2 Kings 19: 2-Kings-20
+    - God heals Hezekiah and extends his life – 2 Kings 20: 2-Kings-20
   God’s Judgement of Sin / Discipline:
     - God judges Adam, Eve and mankind	- Genesis 3: Genesis-3
     - God judges the world with Flood – Genesis 6: Genesis-6
