Edit Esther 9-10 plus "lessons on *" index

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -65,7 +65,7 @@ Spiritual Renewal:
     - Lessons from Ezra on leading a nation in spiritual renewal – Ezra 10: Ezra-10
     - Lessons from Nehemiah on finding spiritual renewal  – Nehemiah 8: Nehemiah-8
     - Lessons from Nehemiah on why spiritual revivals fail – Nehemiah 13: Nehemiah-13
-    - Lessons from Mordecai and Esther on spiritual transformation - Esther 4: Esther-4
+    -  Spiritual warfare lessons from the Book of Esther - Esther 4: Esther-4
   Humility / Meekness:
     - Jacob’s humility before God – Genesis 31: Genesis-31
     - Moses’ humility before God – Numbers 11: Numbers-12
