Update index with job studies and address warning

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -14,6 +14,7 @@ Faith:
     - Elijah’s faith against Ahab and the prophets of Baal – 1 Kings 18: 1-Kings-18
     - Elisha’s faith against the Aramean army – 2 Kings 6: 2-Kings-6
     - Hezekiah’s faith against the Assyrian army – 2 Chronicles 32: 2-Chronicles-32
+    - Job’s enduring faith, despite losing everything – Job 1: Job-1
   Patience:
     - Abraham’s 100-year wait for God’s promised son - Genesis 21: Genesis-21
     - Isaac’s 20-year wait for his promised son - Genesis 25: Genesis-25
@@ -42,6 +43,8 @@ Faith:
     - Elijah's testing in the wilderness (Part II) - 1 Kings 19: 1-Kings-19
     - Micaiah testing in speaking God's Word - 1 Kings 22: 1-Kings-22
     - Elijah tests Elisha before his rapture - 2 Kings 2: 2-Kings-2
+    - Job's testing (Part I) - Job 1: Job-1
+    - Job's testing (Part II) - Job 2: Job-2
 Spiritual Renewal:
   Spiritual Renewal / Transformation:
     - God transforms Abraham and Sara – Genesis 17: Genesis-17
@@ -390,7 +393,7 @@ Spiritual Warfare:
     - Spiritual warfare lessons from Elisha (Part XI) - 2 Kings: 2-Kings-6
     - Spiritual warfare lessons from Nehemiah (Part XII) – Nehemiah 4: Nehemiah-4
     - Spiritual warfare lessons from Nehemiah (Part XIII) – Nehemiah 6: Nehemiah-6
-    - Lessons from Mordecai and Esther on spiritual transformation - Esther 4: Esther-4
+    - Spiritual warfare in the Book of Esther - Esther 4: Esther-4
 Stewardship:
   Lessons on Tithing:
     - "Abraham’s tithes - Genesis 14": Genesis-14
