--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.0.0",
-    "next": "9.5.4",
-    "react": "16.13.1",
+    "next": "^12.0.8",
+    "react": "17.0.2",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "16.13.1",
+    "react-dom": "17.0.2",
     "yaml": "^1.10.0"
   },
   "devDependencies": {
