Remove missing studies

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -46,9 +46,9 @@ Faith:
     - Job's testing (Part I) - Job 1: Job-1
     - Job's testing (Part II) - Job 2: Job-2
   Hope and Comfort During Death, Suffering or Tragedy:
-    - Eternal hope following Sara's death - Genesis 23: Genesis-23
+    # - Eternal hope following Sara's death - Genesis 23: Genesis-23
     - Jacob's request to be buried in the Promised Land - Genesis 47: Genesis-47
-    - Eternal hope following Joseph's death - Genesis 50: Genesis-50
+    # - Eternal hope following Joseph's death - Genesis 50: Genesis-50
     - God's hope during the Jews' slavery - Exodus 1: Exodus-1
     - God's comfort and hope for Moses following his rejection - Exodus 6: Exodus-6
     - Joshua encourages the Jews after Moses' death - Joshua 1: Joshua-1
