Update topic index for Job 24-42

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -80,7 +80,8 @@ Spiritual Renewal:
     - Lessons from Ezra on leading a nation in spiritual renewal - Ezra 10: Ezra-10
     - Lessons from Nehemiah on finding spiritual renewal  - Nehemiah 8: Nehemiah-8
     - Lessons from Nehemiah on why spiritual revivals fail - Nehemiah 13: Nehemiah-13
-    -  Spiritual warfare lessons from the Book of Esther - Esther 4: Esther-4
+    - Spiritual warfare lessons from the Book of Esther - Esther 4: Esther-4
+    - The stages of spiritual renewal / restoration - Job 42: Job-42
   Humility / Meekness:
     - Jacob's humility before God - Genesis 31: Genesis-31
     - Moses' humility before God - Numbers 11: Numbers-12
@@ -144,6 +145,8 @@ Discipleship:
     - Jesus' 10th Commandment (no coveting) - Deuteronomy 5:21: Deuteronomy-5.21
     - Post-Script to Jesus' Ten Commandments Deuteronomy 5.22-33: Deuteronomy-5.22-33
     - Jesus' 10 Commandments - Single Document - Exodus 20: Deuteronomy-5.20
+    - Signs of a faithful believer – Job 29: Job-29
+    - Signs of a transformed believer – Job 31: Job-31
   Being Part of Jesus' Royal Priesthood:
     - God's law of separation / purity - Exodus 23: Exodus-23
     - The symbolic purity in God's Tabernacle - Exodus 26: Exodus-26
@@ -272,6 +275,11 @@ Relationships:
     - David offers restitution to the Gibeonites- 2 Samuel 21: 2-Samuel-21
     - Foreshadows of the New Testament from God's restoration of Israel -2 Kings 7: 2-Kings-7
     - God restores a faithful servant's lost land - 2 Kings 8: 2-Kings-8
+    - God restores Job - Job 42: Job-42
+  Grief Counseling:
+    - Lessons from Job on grief counseling (Part I) - Job 4: Job-4
+    - Lessons from Job on grief counseling (Part II) - Job 8: Job-8
+    - Lessons from Job on grief counseling (Part III) - Job 11: Job-11
 Service:
   Love and Compassion:
     - Abraham's compassion for strangers - Genesis 18: Genesis-18
@@ -313,6 +321,7 @@ Service:
     - Lessons on being a co-builder of Jesus' Church - 1 Kings 5: 1-Kings-5
     - God blesses a poor woman for sharing with Elijah - 1 Kings 17: 1-Kings-17
     - Lessons from the Second Tabernacle on serving God - Ezra 3: Ezra-3
+    - Job's service to the poort and oppressed - Job 29: Job-29
 Leadership:
   Being a Servant Leader:
     - Joseph's servant leadership in jail - Genesis 40: Genesis-40
@@ -524,6 +533,7 @@ Attributes of God:
     - Keeping God's names holy - Deuteronomy 5:11: Deuteronomy-5.11
     - Praising God's holiness - 2 Chronicles 7: 2-Chronicles-7
     - Worshiping God's holiness - Nehemiah 9: Nehemiah-9
+    - God's holy character - Job 40: Job-40
   God's Blessings:
     - Lessons on God's blessings from Israel's blessings to Joseph- Genesis 48: Genesis-48
     - Lessons on God's blessings from Israel's blessings to the 12 tribes - Genesis 49: Genesis-49
@@ -554,6 +564,7 @@ Attributes of God:
     - Lessons on using God's wisdom to lead - 1 Kings 4: 1-Kings-4
     - Lessons on seeking and sharing God's wisdom - 1 Kings 10: 1-Kings-10
     - Lessons regarding God's wisdom from Solomon - 2 Chronicles 1: 2-Chronicles-1
+    - Lessons regarding God's wisdom from Job - Job 28: Job-28
   God's Gift of Healing:
     - God's promise of healing - Exodus 15: Exodus-15
     - God's blessing of both a prolonged and healthy life - Deuteronomy 34: Deuteronomy-34
@@ -598,6 +609,8 @@ Apologetics:
     - The origins of the nations - Genesis 10: Genesis-10 
     - The Tower of Babel - Genesis 11: Genesis-11
     - Proof of the parting of the Red Sea / Mount Horab - Exodus 14: Exodus-14
+    - Job reveals gravity and God's expansion of the universe - Job 26: Job-26
+    - God's love for humanity in His creation - Job 38: Job-38
   Apologetics Regarding the Bible: 
     - Proof of the Trinity - Genesis 5: Genesis-5
     - Proof of Jesus in the ordering of the 12 tribes in the wilderness - Numbers 2: Numbers-2
@@ -626,7 +639,8 @@ End Times:
     - End time revelations from Absalom's defeat - 2 Samuel 18: 2-Samuel-18
     - End time revelations from Solomon's fall - 1 Kings 10: 1-Kings-10
     - End time revelations from five wicked kings of Northern Israel - 1 Kings 16: 1-Kings-16
-    - End time revelations from the kings of Israel and Judah - 2 Kings 15 : 2-Kings-15
+    - End time revelations from the kings of Israel and Judah - 2 Kings 15: 2-Kings-15
+    - God's judgement of Satan/Leviathan - Job 41: Job-41
   The Rapture of the Church:
     - Enoch's rapture - Genesis 5: Genesis-5 
     - The rapture foreshadowed in the Egyptian plagues - Exodus 11: Exodus-11
