--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -321,7 +321,7 @@ Service:
     - Lessons on being a co-builder of Jesus' Church - 1 Kings 5: 1-Kings-5
     - God blesses a poor woman for sharing with Elijah - 1 Kings 17: 1-Kings-17
     - Lessons from the Second Tabernacle on serving God - Ezra 3: Ezra-3
-    - Job's service to the poort and oppressed - Job 29: Job-29
+    - Job's service to the poor and oppressed - Job 29: Job-29
 Leadership:
   Being a Servant Leader:
     - Joseph's servant leadership in jail - Genesis 40: Genesis-40
@@ -453,7 +453,7 @@ Jesus in the Old Testament:
     - Jesus appears to Samson's parents - Judges 13: Judges-13
     - The foreshadow of Jesus in the gates of Jerusalem - Nehemiah 3: Nehemiah-3
 Attributes of God:
-  God's Faithful Old Testament Covenants:
+  God's Old Testament Covenants:
     - The Noah Covenant	- Genesis 9: Genesis-9
     - The Abrahamic Covenant - Genesis 12: Genesis-12
     - The Mosaic Covenant - Exodus 20: Exodus-20
