--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build && next export",
     "start": "next dev",
-    "test": "jest"
+    "test": "jest",
+    "lint": "next lint"
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
@@ -21,6 +22,8 @@
     "@babel/preset-env": "^7.12.7",
     "@types/jest": "^26.0.17",
     "babel-jest": "^26.6.3",
+    "eslint": "^8.10.0",
+    "eslint-config-next": "12.1.0",
     "jest": "^26.6.3"
   }
 }
