--- a/.github/workflows/gated.yml
+++ b/.github/workflows/gated.yml
@@ -22,11 +22,11 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
       # Runs a single command using the runners shell
       - name: Install modules
         run: yarn
-
       # Runs a set of commands using the runners shell
       - name: Run tests
         run: yarn test
+      - name: Lint
+        run: yarn lint
