Insert "Worship" study item

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -399,6 +399,7 @@ Worship:
     - Things God wants from your worship - 1 Chronicles 25: 1-Chronicles-25
     - Reasons to praise God from Solomon's prayer - 2 Chronicles 6: 2-Chronicles-6
     - Lessons from Nehemiah on the elements of true worship - Nehemiah 12: Nehemiah-12
+    - Lessons on worshiping God's majesty - Job 37: Job-37
 Spiritual Warfare:
   Lessons on Spiritual Warfare:
     - Spiritual warfare lessons from the wilderness - Numbers 1:5-16: Numbers-1.5-16
