Add new video links

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -7,3 +7,19 @@ job-3:
   videoSrc: https://www.youtube.com/embed/bUCWJAnaXqQ
 job-4:
   videoSrc: https://www.youtube.com/embed/iL7L5LViFEA
+job-5:
+  videoSrc: https://www.youtube.com/embed/HaPZuVwmQFY
+job-6:
+  videoSrc: https://www.youtube.com/embed/YEtbV-lyBRQ
+job-7:
+  videoSrc: https://www.youtube.com/embed/0s00C7TtsUQ
+job-8:
+  videoSrc: https://www.youtube.com/embed/glpj82Qo0bY
+job-9:
+  videoSrc: https://www.youtube.com/embed/CX8OVGkVAeo
+job-10:
+  videoSrc: https://www.youtube.com/embed/xiX0DLAXKzo
+job-11:
+  videoSrc: https://www.youtube.com/embed/VqsXbLnq5fI
+job-12:
+  videoSrc: https://www.youtube.com/embed/wsn-qKnmH14
