--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -23,3 +23,7 @@ job-11:
   videoSrc: https://www.youtube.com/embed/VqsXbLnq5fI
 job-12:
   videoSrc: https://www.youtube.com/embed/wsn-qKnmH14
+job-13:
+  videoSrc: https://www.youtube.com/embed/_DIaeMihHNs
+job-14:
+  videoSrc: https://www.youtube.com/embed/XitZrVQfUuE
