Update topic index for psalm studies

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -45,6 +45,8 @@ Faith:
     - Elijah tests Elisha before his rapture - 2 Kings 2: 2-kings-2
     - Job's testing (Part I) - Job 1: job-1
     - Job's testing (Part II) - Job 2: job-2
+    - What God offers during your testing and trials (Part I) - Psalm 13: psalm-13
+    - What God offers during your testing and trials (Part II)- Psalm 25: psalm-25
   Hope and Comfort During Death, Suffering or Tragedy:
     - Eternal hope following Sara's death - Genesis 23: genesis-23
     - Jacob's request to be buried in the Promised Land - Genesis 47: genesis-47
@@ -57,6 +59,8 @@ Faith:
     - The eternal hope in David's mourning for the backslidden Saul - 2 Samuel 1: 2-samuel-1
     - The hope God gave the Jews while in exile - 2 Chronicles 36: 2-chronicles-36
     - What Jesus offers you during trials - Job 30: job-30
+    - How to respond when evil appears to succeed - Psalm 10: psalm-10
+    - What God offers when you are filled with fear or worry - Psalm 11: psalm-11
 Spiritual Renewal:
   Spiritual Renewal / Transformation:
     - God transforms Abraham and Sara - Genesis 17: genesis-17
@@ -82,6 +86,8 @@ Spiritual Renewal:
     - Lessons from Nehemiah on why spiritual revivals fail - Nehemiah 13: nehemiah-13
     - Spiritual warfare lessons from the Book of Esther - Esther 4: esther-4
     - The stages of spiritual renewal / restoration - Job 42: job-42
+    - Signs of a transformed believer (Part I) - Psalm 15: psalm-15
+    - Signs of a transformed believer (Part I) - Psalm 16: psalm-16
   Humility / Meekness:
     - Jacob's humility before God - Genesis 31: genesis-31
     - Moses' humility before God - Numbers 11: numbers-12
@@ -145,8 +151,8 @@ Discipleship:
     - Jesus' 10th Commandment (no coveting) - Deuteronomy 5:21: deuteronomy-5.21
     - Post-Script to Jesus' Ten Commandments Deuteronomy 5.22-33: deuteronomy-5.22-33
     - Jesus' 10 Commandments - Single Document - Exodus 20: deuteronomy-5.20
-    - Signs of a faithful believer – Job 29: job-29
-    - Signs of a transformed believer – Job 31: job-31
+    - Signs of a faithful believer - Job 29: job-29
+    - Signs of a transformed believer - Job 31: job-31
   Being Part of Jesus' Royal Priesthood:
     - God's law of separation / purity - Exodus 23: exodus-23
     - The symbolic purity in God's Tabernacle - Exodus 26: exodus-26
@@ -207,6 +213,7 @@ Discipleship:
     - Things God desires from you (Part I) - 1 Chronicles 26: 1-chronicles-26
     - Things God desires from you (Part II) - 1 Chronicles 29: 1-chronicles-29
     - Things God desires from you (Part III) - 2 Chronicles 19: 1-chronicles-19
+    - Blessings from a Covenant Relationship - Psalm 1: psalm-1
 Relationships:
   Dating:
     - The search for Isaac's godly spouse - Genesis 24: genesis-24
@@ -379,6 +386,9 @@ Prayer:
     - Hezekiah's prayers save Judah - 2 Kings 19: 2-kings-19
     - Josiah's prayers delay Judah's judgement - 2 Kings 22: 2-kings-22
     - Lessons from Nehemiah on intercessory prayer - Nehemiah 1: nehemiah-1
+    - David's lessons on effective prayer (Part I) - Psalm 5: psalm-5
+    - David's lessons on effective prayer (Part II) - Psalm 17: psalm-17
+    - David's lessons on intercessory prayer - Psalm 20: psalm-20
 Worship:
   Worship:
     - Noah's altar of gratitude - Genesis 8: genesis-8
@@ -400,6 +410,10 @@ Worship:
     - Reasons to praise God from Solomon's prayer - 2 Chronicles 6: 2-chronicles-6
     - Lessons from Nehemiah on the elements of true worship - Nehemiah 12: nehemiah-12
     - Lessons on worshiping God's majesty - Job 37: job-37
+    - Praising God for His creation - Psalm 8: psalm-8
+    - David's lessons on the reasons to praise God (Part I) - Psalm 18: psalm-18
+    - David's lessons on the reasons to praise God (Part II)- Psalm 19: psalm-19
+    - David's lessons on the reasons to praise God (Part III)- Psalm 21: psalm-21
 Spiritual Warfare:
   Lessons on Spiritual Warfare:
     - Spiritual warfare lessons from the wilderness - Numbers 1:5-16: numbers-1.5-16
@@ -453,6 +467,9 @@ Jesus in the Old Testament:
     - Jesus appears to Gideon	- Judges 6: judges-6
     - Jesus appears to Samson's parents - Judges 13: judges-13
     - The foreshadow of Jesus in the gates of Jerusalem - Nehemiah 3: nehemiah-3
+    - The foreshadow of Jesus as the Suffering Servant - Psalm 22: psalm-22
+    - The foreshadow of Jesus as the Good Shepherd - Psalm 23: psalm-23
+    - The foreshadow of Jesus as the King of Glory - Psalm 24: psalm-24
 Attributes of God:
   God's Old Testament Covenants:
     - The Noah Covenant	- Genesis 9: genesis-9
@@ -494,6 +511,7 @@ Attributes of God:
     - God give Ahaziah three chances to repent - 2 Kings 1: 2-kings-1
     - God's mercy and grace from His selection of the Davidic kings - 1 Chronicles 3: 1-chronicles-3
     - God's grace in selecting Esther and Mordecai - Esther 2: esther-2
+    - David's example, the mercy and grace that God offers - Psalm 6: psalm-6
   God's Justice:
     - Principles of divine justice (Part I) - Exodus 21: exodus-21
     - Principles of divine justice (Part I) - Exodus 22: exodus-22
@@ -529,6 +547,9 @@ Attributes of God:
     - From Jehoshaphat, seven lessons on God's deliverance - 2 Chronicles 20: 2-chronicles-20
     - God delivers Mordecai from Haman's schemes - Esther 6: esther-6
     - God delivers the Jews from Haman's schemes - Esther 8: esther-8
+    - God delivers David based on his faith - Psalm 3: psalm-3
+    - How to respond when attacked (Part I) - Psalm 4: psalm-4
+    - How to Respond when attacked (Part I) -Psalm 9: psalm-9
   God's Holiness:
     - Honoring God's holiness with a holy life - Leviticus 19: leviticus-19
     - Keeping God's names holy - Deuteronomy 5:11: deuteronomy-5.11
@@ -612,6 +633,7 @@ Apologetics:
     - Proof of the parting of the Red Sea / Mount Horab - Exodus 14: exodus-14
     - Job reveals gravity and God's expansion of the universe - Job 26: job-26
     - God's love for humanity in His creation - Job 38: job-38
+    - Praising God for His creation - Psalm 8: psalm-8
   Apologetics Regarding the Bible:
     - Proof of the Trinity - Genesis 5: genesis-5
     - Proof of Jesus in the ordering of the 12 tribes in the wilderness - Numbers 2: numbers-2
@@ -642,6 +664,7 @@ End Times:
     - End time revelations from five wicked kings of Northern Israel - 1 Kings 16: 1-kings-16
     - End time revelations from the kings of Israel and Judah - 2 Kings 15: 2-kings-15
     - God's judgement of Satan/Leviathan - Job 41: job-41
+    - End time revelation of the rebellion against Jesus - Psalm 2: psalm-2
   The Rapture of the Church:
     - Enoch's rapture - Genesis 5: genesis-5
     - The rapture foreshadowed in the Egyptian plagues - Exodus 11: exodus-11
@@ -654,6 +677,7 @@ Sin:
     - Identifying the seven stages of sin - Leviticus 13: leviticus-13
     - Lessons on how sin spreads - Judges 18: judges-18
     - Causes and consequences of rebellion - Numbers 16: numbers-16
+    - Signs of a foolish sinner - Psalm 14: psalm-14
   Pride / Vanity:
     - Miriam's pride leads to leprosy - Numbers 12: numbers-12
     - Lessons from Gideon on the dangers of pride- Judges 8: judges-8
@@ -811,6 +835,8 @@ Sin:
     - Miriam and Aaron gossip against Moses - Numbers 12: numbers-12
     - Korah slanders Moses - Numbers 16: numbers-16
     - Jezebel slanders Naboth to kill him - 1 Kings 21: 1-kings-21
+    - David's lessons on responding to slander - Psalm 7: psalm-7
+    - David's lessons on responding to gossip - Psalm 12: psalm-12
   Spiritual Blindness:
     - Spiritual blindness in Sodom and Gomorrah - Genesis 19: genesis-19
     - Isaac's spiritual blindness - Genesis 27: genesis-27
