Fix topic links for sorted genesis filename

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -621,13 +621,13 @@ Attributes of God:
     - God judges Judah with exile - 2 Kings 25: 2-kings-25
 Apologetics:
   Apologetics Regarding Creation:
-    - The days of Genesis explained - Genesis 1(a)(1): genesis-1.1-8
-    - God's creation of the universe and Earth (Days 1 - 2) Genesis 1.1-8: genesis-1.1-8
-    - God's creation of the first life on Earth (Days 3 - 4) - Genesis 1.9-19: genesis-1.9-19
-    - God's creation of the animals and mankind (Days 5 - 6) - Genesis 1.20-31: genesis-1.9-19
+    - The days of Genesis explained - Genesis 1(a)(1): genesis-1b.1-8
+    - God's creation of the universe and Earth (Days 1 - 2) Genesis 1.1-8: genesis-1b.1-8
+    - God's creation of the first life on Earth (Days 3 - 4) - Genesis 1.9-19: genesis-1c.9-19
+    - God's creation of the animals and mankind (Days 5 - 6) - Genesis 1.20-31: genesis-1c.9-19
     - The Flood evidence - 	Genesis 7: genesis-7
     - The Garden of Eden's possible location - Genesis 2: genesis-2
-    - The origins of language - Genesis 1.20-31: genesis-1.9-19
+    - The origins of language - Genesis 1.20-31: genesis-1c.9-19
     - The origins of the nations - Genesis 10: genesis-10
     - The Tower of Babel - Genesis 11: genesis-11
     - Proof of the parting of the Red Sea / Mount Horab - Exodus 14: exodus-14
