replace muted video

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -24,6 +24,6 @@ job-11:
 job-12:
   videoSrc: https://www.youtube.com/embed/wsn-qKnmH14
 job-13:
-  videoSrc: https://www.youtube.com/embed/_DIaeMihHNs
+  videoSrc: https://www.youtube.com/embed/KiQL-_2nrfg
 job-14:
   videoSrc: https://www.youtube.com/embed/XitZrVQfUuE
