Ref Job 15-18 videos

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -27,3 +27,11 @@ job-13:
   videoSrc: https://www.youtube.com/embed/KiQL-_2nrfg
 job-14:
   videoSrc: https://www.youtube.com/embed/XitZrVQfUuE
+job-15:
+  videoSrc: https://www.youtube.com/embed/y2DB0tomTh8
+job-16:
+  videoSrc: https://www.youtube.com/embed/lPrmA3480ow
+job-17:
+  videoSrc: https://www.youtube.com/embed/T1V-dKHvKAw
+job-18:
+  videoSrc: https://www.youtube.com/embed/giEbHIOu4So
