--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -35,3 +35,11 @@ job-17:
   videoSrc: https://www.youtube.com/embed/T1V-dKHvKAw
 job-18:
   videoSrc: https://www.youtube.com/embed/giEbHIOu4So
+job-19: 
+  videoSrc: https://www.youtube.com/embed/LrPuMKEw5AA
+job-20: 
+  videoSrc: https://www.youtube.com/embed/hG8nnCxZ-1U
+job-21: 
+  videoSrc: https://www.youtube.com/embed/_bHuLaOZIow
+job-22: 
+  videoSrc: https://www.youtube.com/embed/SGWLFh7528s
