--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -34,6 +34,8 @@ job-16:
 job-17:
   videoSrc: https://www.youtube.com/embed/T1V-dKHvKAw
 job-18:
+  videoSrc: 
+job-18:
   videoSrc: https://www.youtube.com/embed/giEbHIOu4So
 job-19: 
   videoSrc: https://www.youtube.com/embed/LrPuMKEw5AA
