--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -43,3 +43,5 @@ job-21:
   videoSrc: https://www.youtube.com/embed/_bHuLaOZIow
 job-22: 
   videoSrc: https://www.youtube.com/embed/SGWLFh7528s
+jon-23:
+  videoSrc: https://www.youtube.com/watch?v=DSexpwhIO1A
