Updated to include all active YT vids.

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -45,3 +45,13 @@ job-22:
   videoSrc: https://www.youtube.com/embed/SGWLFh7528s
 jon-23:
   videoSrc: https://www.youtube.com/watch?v=DSexpwhIO1A
+job-24: 
+  videoSrc: https://www.youtube.com/watch?v=IAVHREWHkzE
+job-25: 
+  videoSrc: https://www.youtube.com/watch?v=NCURMGzbIvw
+job-26: 
+  videoSrc: https://www.youtube.com/watch?v=byHNk0HBURs
+job-27: 
+  videoSrc: https://www.youtube.com/watch?v=a-T_dEl4zEs
+job-28: 
+  videoSrc: https://www.youtube.com/watch?v=BrXmmYcYtpk
