Updated With YouTube URLS

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -43,7 +43,7 @@ job-21:
   videoSrc: https://www.youtube.com/embed/_bHuLaOZIow
 job-22: 
   videoSrc: https://www.youtube.com/embed/SGWLFh7528s
-jon-23:
+job-23:
   videoSrc: https://www.youtube.com/watch?v=DSexpwhIO1A
 job-24: 
   videoSrc: https://www.youtube.com/watch?v=IAVHREWHkzE
@@ -55,3 +55,11 @@ job-27:
   videoSrc: https://www.youtube.com/watch?v=a-T_dEl4zEs
 job-28: 
   videoSrc: https://www.youtube.com/watch?v=BrXmmYcYtpk
+job-29: 
+  videoSrc: https://youtu.be/JywmeC-n1h8
+job-30: 
+  videoSrc: https://youtu.be/1vXjb0rrj0M
+job-31: 
+  videoSrc: https://youtu.be/QZ4MbUpqm_A
+job-32: 
+  videoSrc: https://youtu.be/FnWHuMYBw-8
