Job 23-32 Embed Links

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -43,5 +43,23 @@ job-21:
   videoSrc: https://www.youtube.com/embed/_bHuLaOZIow
 job-22: 
   videoSrc: https://www.youtube.com/embed/SGWLFh7528s
-jon-23:
-  videoSrc: https://www.youtube.com/watch?v=DSexpwhIO1A
+job-23:
+  videoSrc: https://www.youtube.com/embed/DSexpwhIO1A
+job-24:
+  videoSrc: https://www.youtube.com/embed/IAVHREWHkzE
+job-25:
+  videoSrc: https://www.youtube.com/embed/NCURMGzbIvw
+job-26:
+  videoSrc: https://www.youtube.com/embed/byHNk0HBURs
+job-27:
+  videoSrc: https://www.youtube.com/embed/a-T_dEl4zEs
+job-28:
+  videoSrc: https://www.youtube.com/embed/BrXmmYcYtpk
+job-29: 
+  videoSrc: https://www.youtube.com/embed/JywmeC-n1h8
+job-30: 
+  videoSrc: https://www.youtube.com/embed/1vXjb0rrj0M
+job-31: 
+  videoSrc: https://www.youtube.com/embed/QZ4MbUpqm_A
+job-32: 
+  videoSrc: https://www.youtube.com/embed/FnWHuMYBw-8
