--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -63,3 +63,7 @@ job-31:
   videoSrc: https://www.youtube.com/embed/QZ4MbUpqm_A
 job-32: 
   videoSrc: https://www.youtube.com/embed/FnWHuMYBw-8
+job-33:
+  videoSrc: https://www.youtube.com/embed/5-sejwYhiEw
+job-34:
+  videoSrc: https://www.youtube.com/embed/ou9pkKSv01A
